feat: complete javadoc documentation and fix all warnings
- Add comprehensive Javadoc to all classes, methods, and DTOs
- Fix null safety warnings with Objects.requireNonNull
- Update @MockBean to @MockitoBean for Spring Boot 3.4+
- Add parameterized tests for SonarQube S5976
- Fix deprecated gateway properties
- Add Spring configuration metadata files
- Update Spring Boot to 3.5.9
- Fix application-test.yml JWT property structure
- Remove all SonarQube and compiler warnings